--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,11 @@ classifiers = [
   "Programming Language :: Python :: 3.12"
 ]
 description = "Auto translation of new anime episodes based on Yui-MHCP001"
-homepage = "https://github.com/TensoRaws/yuisub"
+homepage = "https://github.com/EutropicAI/yuisub"
 license = "GPL-3.0-only"
 name = "yuisub"
 readme = "README.md"
-repository = "https://github.com/TensoRaws/yuisub"
+repository = "https://github.com/EutropicAI/yuisub"
 version = "1.3.1"
 
 # Requirements
